# CS106L_24FA

./: .gitmodules  CMakeLists.txt  CMakelists.txt  Makefile  README.md
notes/: A1.md  Week 2  Week 3  Week 3.md
onclass exercise/: quadratic.cpp
